[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "upreason"
version = "0.1.0"
description = "Find out why a package version was released — security fixes, changelog entries, and more."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
upreason = "upreason.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
